# FratFinderAI

./: .coverage  .env.example  .gitignore  .tmp_nav_21.py  .tmp_nav_research.py  .tmp_nic_links.py  .tmp_run_validation_benchmarks.ts  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROJECT_REPORT.md  README.md  VALIDATION_REPORT_2026-03-31.md  benchmark_results_postfix.json  package.json  pnpm-lock.yaml  pytest.ini  research_nav_21.json  tsconfig.base.json
artifacts/: README.md
docs/: NEW_DEVELOPER_GUIDE.md  (+1 more)
services/crawler/: pyproject.toml
services/crawler/evaluation/: chapter_status_goldset.jsonl  find_instagram_goldset.jsonl
services/crawler/fixtures/: sample_directory.html  sample_json_ld_educational_organizations.html  sample_script_json.html  static_directory.html
services/crawler/src/fratfinder_crawler/: __init__.py  __main__.py  candidate_sanitizer.py  cli.py  config.py  contracts.py  discovery.py  field_job_support.py  field_jobs.py  logging_utils.py  models.py  pipeline.py  precision_tools.py  provider_catalog.py
services/crawler/src/fratfinder_crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/crawler/src/fratfinder_crawler/adapters/: __init__.py  base.py  directory_v1.py  locator_api.py  registry.py  script_json.py
services/crawler/src/fratfinder_crawler/adaptive/: __init__.py  frontier.py  policy.py  reward.py  stop_conditions.py  template_memory.py
services/crawler/src/fratfinder_crawler/analysis/: __init__.py  chapter_link_scoring.py  embedded_data_detector.py  page_analyzer.py  source_classifier.py  strategy_selector.py
(+455 files in other folders)
