[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fratfinder-crawler"
version = "2.0.1"
description = "Frat Finder AI crawler service"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "jsonschema>=4.23.0",
  "langgraph>=0.2.34",
  "openai>=1.0.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "psycopg[binary]>=3.2.2",
  "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-mock>=3.14.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

